assets/css/main.scss
---
---
@charset "UTF-8";

// Mix in the base theme
@import "minima";

$left-colour: #EFA307;
$right-color: #FFC445;
$panel-green: #B9CD5F;

.logo {
    width: auto !important;
}

// Mainly to apply the background colour.
.with-bg {
    padding: 0;
    background: linear-gradient(90deg, $left-colour 40%, $right-color 0%);
}

.with-screenshot {
    background-color: $panel-green;
}

.background-wrapper {
    background-image: url("../img/bg.png");
    background-size: auto;
    background-position-x: center;
    background-repeat: no-repeat;
    min-height: 1200px;
}

// Style-town starts here!
.wrapper {
    display: flex;
    padding-top: 200px;

    .content-block {
        width: 60%;
        margin-right: 3%;
    }
    .screenshot-block {
        width: 33%;
        p {
            margin-top: 0;
            margin-bottom: 0;
        }
    }
    #screenshots {
        visibility: hidden;
    }
}

// If it's a small screen, collaspe it into a single column
@media screen and (max-width: 800px) {
    .with-bg {
        padding: 0;
        background: $panel-green;
    }

    .background-wrapper {
        background-image: url("../img/mobile-bg.png");
        background-size: auto;
        background-position-x: center;
        background-repeat: no-repeat;
        min-height: 1200px;
    }    

    .wrapper {
        display: block;
        .content-block {
            width: 100%
        }
        .screenshot-block {
            width: 100%;
            img {
                width: 100%;
            }
        }
        #screenshots {
            visibility: visible;
        }
    }
}

.media-wrapper {
    width: 100%;
    img {
        width: 80%;
    }
    p {
        font-size: 14pt;
        text-align: center;
    }
}

// Stolen from _base.scss
.header-wrapper {
    display: block;
    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
    margin-right: auto;
    margin-left: auto;
    padding-right: $spacing-unit;
    padding-left: $spacing-unit;
    @extend %clearfix;
    
    @include media-query($on-laptop) {
        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
        padding-right: $spacing-unit / 2;
        padding-left: $spacing-unit / 2;
    }
      
}

